--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,8 +1,7 @@
 header {
 	
 	height: 94px;
-	margin-bottom: 30px;
-	background: #4277b7 url('http://i.imgur.com/Pm5hf.png') repeat-x;
+	background: #4277b7;
 	
 	h1 {
 		width: 500px;
@@ -12,9 +11,11 @@ header {
 		padding: 0;
 	}
 }
-
+.messages {
+  margin-bottom: 15px;
+}
 #map-canvas {
-  height: 500px;
+  height: 400px;
   width: 100%;
 }
 
@@ -35,7 +36,6 @@ header {
 	
 	// when the page is too narrow for the 500px logo, switch to a smaller, 300px version (also center it)
 	header h1 {
-		background: url('http://i.imgur.com/8LfcwUs.png') no-repeat center;
 		width: 100%;
 	}
 	
